# ESG

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.org  database.md  docker-compose.yaml
api/: .env.example  Dockerfile  Dockerfile.test  Dockerfile.view  Makefile  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  openapi.json  pyproject.toml  test_scripts.sql  tox.ini
api/app/: __init__.py  dependencies.py  exceptions.py  load_data.py  main.py  settings.py  utils.py  view_main.py
api/app/database/: __init__.py  session_manager.py  sync_session_manager.py
api/app/database/alembic/: env.py
api/app/database/alembic/versions/: 2022-10-11_f5727821a974_.py  2022-10-25_e3b13b49a5ac_add_is_processed.py  2022-10-26_61e997004b48_.py  2022-11-09_3a79a22b07ba_.py  2022-11-11_81d4e0456e95_.py  2022-11-23_909be6493aeb_.py  2023-01-12_3a9a41953764_.py  2023-01-26_df093a18dfdd_.py  2023-02-01_56a380c80e86_.py  2023-02-01_faaa2b068990_.py  2023-02-13_cab5f2d71e76_.py  2023-03-04_fdf4c2482f38_.py  2023-03-17_cf997157f3c9_.py
api/app/database/models/: __init__.py  bank.py  model.py  source.py  text.py  text_result.py  text_sentence.py
api/app/database/models/views/: __init__.py  aggregate_table_model_result.py  text_sentence_count.py
api/app/dataloader/: __init__.py  bank_parser.py  base_parser.py  broker_parser.py  insurance_parser.py  mfo_parser.py
api/app/query/: bank.py  model.py  source.py  text.py  text_result.py  views.py
api/app/router/: __init__.py  bank.py  model.py  source.py  text.py  text_result.py  views.py
api/app/schemes/: bank.py  bank_types.py  mdf_models.py  model.py  source.py  text.py  views.py
api/app/tasks/: __init__.py  transform_texts.py
api/app/views/: __init__.py  aggregate_database_model_result.py  count_sentences_per_month.py  update_indexes_aggregate_database_model_result.py
api/cassettes/: get_cbr_bank_file.yaml  get_cbr_bank_page.yaml  get_cbr_broker_file.yaml  get_cbr_insurance_file.yaml  get_cbr_mfo_file.yaml
api/requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
api/tests/: conftest.py  test_migrations.py  utils.py
api/tests/api_tests/: test_api_bank.py  test_api_model.py  test_api_source.py  test_api_text.py  test_api_text_result.py
api/tests/api_tests/cbr_tests/: conftest.py  test_cbr_bank_parser.py  test_cbr_broker_parser.py  test_cbr_insurance_parser.py  test_cbr_mfo_parser.py
api/tests/view_tests/: aggregate_text_restults_test.py
configs/provisioning/dashboards/: dashboard.yaml
configs/provisioning/datasources/: default_postgres.yaml
docs/: HSEUniversity.cls  abstract_header.tex  api_table.tex  generate_openapi.py  ideas.org  local-bib.bib  tz.tex  vkr.org  vkr.tex
docs/img/: Diagramms.drawio.xml
docs/project_proposal/: ProjectProposal.cls  presentation.org  proposal.org  proposal.tex
experiments/: .flake8  Makefile  migrate.py  pyproject.toml
experiments/catboost_model/: MLproject  python_env.yaml  train_catboost.py
experiments/common/: __init__.py  args.py  pyproject.toml
experiments/sklearn_forest/: MLproject  train_forest.py
experiments/sklearn_gradient/: MLproject  train_gradient.py
experiments/sklearn_logreg/: MLproject  python_env.yaml  train_logreg.py
experiments/sklearn_svc/: MLproject  train_svc.py
experiments/xgboost_model/: MLproject  python_env.yaml  train_xgboost.py
models/mdf/: .dockerignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
models/mdf/app/: api.py  args_parser.py  dto.py  main.py  settings.py
models/mdf/app/models/: base_mdf.py  mdf.py  mdf_combined.py  mdf_mortality.py
models/mdf/requirements/: requirements-dev.txt  requirements.txt
notebooks/: 1 30_04.R  AddInn.ipynb  Banki parser.ipynb  IrecommendParser.ipynb  MapCodesWithXlsx.ipynb  Metalurg.ipynb  Metalurg_model.ipynb  ProkurorModel.ipynb  ProkurorParser.ipynb  Sentiment_model_parse_from_db.ipynb  SravniParser.ipynb  VK_parser.ipynb  api_plots.ipynb  banki-ru-reviews-to-sentences (2).ipynb  cbr_collector.ipynb  clusret_prokuror.ipynb  id_other_industries.csv  mdf_transform.ipynb  plot_runs.ipynb  procuror_metalurg.py  transform_text.ipynb
parser/: .env.example  Dockerfile  Makefile  main.py  pyproject.toml  tox.ini
parser/banki_ru/: banki_base_parser.py  broker_parser.py  database.py  insurance_parser.py  mfo_parser.py  news_parser.py  queries.py  requests_.py  reviews_parser.py  schemes.py
parser/common/: api.py  base_parser.py  database.py  requests_.py  schemes.py  settings.py
parser/irecommend_reviews/: database.py  irecommend.npy  queries.py  reviews_paresr.py  schemes.py
parser/requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
parser/sravni_reviews/: base_parser.py  database.py  insurance_parser.py  mfo_parser.py  queries.py  schemes.py  sravni_reviews.py
parser/tests/: client.py  conftest.py  mixins.py  request_data.py  utils.py
parser/tests/bank_ru_tests/: banks_reviews_test.py  broker_reviews_test.py  conftest.py  insurance_reviews_test.py  mfo_reviews_test.py  news_test.py  queries_test.py
parser/tests/common/: api_test.py
parser/tests/sravni_tests/: banks_reviews_test.py  conftest.py  insurance_test.py  mfo_test.py  queries_test.py
parser/tests/vk_tests/: conftest.py  queries_test.py  vk_parser_test.py
parser/utils/: __init__.py  arg_parser.py  browser.py  path.py
parser/vcr_cassettes/banki_ru/: bank_reviews_response.yaml  banki_banks_list.yaml  broker_page.yaml  get_broker_list_with_header.yaml  get_insurance_list.yaml  get_mfo_list.yaml  insurance_page.yaml  mfo_page.yaml  news_page.yaml  news_page_lenta.yaml
parser/vcr_cassettes/sravni_ru/: bank_sravni_reviews_response.yaml  insurance_sravni_reviews_response.yaml  mfo_sravni_reviews_response.yaml  sravni_banks_list.yaml  sravni_insurance_list.yaml  sravni_mfo_list.yaml
parser/vcr_cassettes/vk/: group_page.yaml  post_comments.yaml
parser/vk_parser/: bank_parser.py  base_parser.py  database.py  other_industries_parser.py  queries.py  schemes.py  vk_api.py  vk_bank_list.npy  vk_other_industries.npy
(+1 files in other folders)
