[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Samoed <samoed.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.31"
fastapi = "^0.95"
pydantic = { extras = ["dotenv"], version = "^1.10.2" }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
uvicorn = "^0.18.3"
sqlalchemy-utils = "^0.40.0"
#  celery = "^5.2.7"
nltk = "^3.7"
alembic = "^1.11.1"
asyncpg = "^0.26.0"
pandas = "^1.5.1"
openpyxl = "^3.0.10"
aiohttp = "^3.8.3"
psycopg2-binary = "^2.9.5"
schedule = "^1.1.0"
mako = "^1.2.4"
markupsafe = "^2.1.2"
greenlet = "^2.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pyupgrade = "^3.3.1"
types-beautifulsoup4 = "^4.11.6.7"
types-requests = "^2.31.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
setuptools = "^65.4.1"
pytest-mock = "^3.9.0"
coverage = {extras = ["toml"], version = "^7.2.5"}
tox = "^3.26.0"
pytest-cov = "^4.0.0"
ConfigArgParse = "^1.5.3"
pytest-aiohttp = "^1.0.4"
httpx = "^0.23.0"
vcrpy = "^4.3.1"
requests-mock = "^1.10.0"
mypy = {extras = ["reports"], version = "^1.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
combine_as_imports = true
skip_gitignore = true
py_version = 310

# https://github.com/tiangolo/sqlmodel/blob/main/pyproject.toml
[tool.mypy]
python_version = "3.10"
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
plugins = [
    "pydantic.mypy",
]
ignore_missing_imports = false
# --strict end
exclude = [
    "tests/"
]

[[tool.mypy.overrides]]
module = [
    "sqlalchemy_utils",
    "nltk",
    "pandas",
    "schedule",
    "uvicorn",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py310']
preview = true
exclude = '''
/(
    .git
  | .venv
  | notebooks
)/
'''

[tool.coverage.run]
source = ["app"]
omit = [
    "main.py",
    "view_main.py",
    "__init__.py",
]

[tool.coverage.report]
omit = [
    "main.py",
    "view_main.py",
    "__init__.py",
]
skip_empty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
]
